Creating Auth module

--- a/src/js/article/article.html
+++ b/src/js/article/article.html
@@ -11,14 +11,14 @@
         <div class="article-meta">
           <a href=""><img /></a>
           <div class="info">
-            <a href="" class="author">Brad Green</a>
-            <span class="date">January 20th</span>
+            <a href="" class="author">Maulik fojdar</a>
+            <span class="date">July 20th</span>
           </div>
 
           <button class="btn btn-sm btn-outline-secondary">
             <i class="ion-plus-round"></i>
             &nbsp;
-            Follow Brad Green
+            Follow Maulik Fojdar
           </button>
           &nbsp;
           <button class="btn btn-sm btn-outline-primary">
@@ -65,14 +65,14 @@
       <div class="article-meta">
         <a href=""><img /></a>
         <div class="info">
-          <a href="" class="author">Brad Green</a>
-          <span class="date">January 20th</span>
+          <a href="" class="author">Maulik Fojdar</a>
+          <span class="date">July 20th</span>
         </div>
 
         <button class="btn btn-sm btn-outline-secondary">
           <i class="ion-plus-round"></i>
           &nbsp;
-          Follow Brad Green
+          Follow Maulik Fojdar
         </button>
         &nbsp;
         <button class="btn btn-sm btn-outline-primary">
@@ -114,10 +114,10 @@
             </a>
             &nbsp;
             <a class="comment-author" href="">
-              BradGreen
+              maulikfojdar
             </a>
             <span class="date-posted">
-              Jan 20, 2016
+              July 20, 2016
             </span>
           </div>
         </div>
