--- a/src/js/home/home.html
+++ b/src/js/home/home.html
@@ -3,7 +3,7 @@
   <!-- Splash banner that only shows when not logged in -->
   <div class="banner" show-authed="false">
     <div class="container">
-      <h1 class="logo-font" ng-bind="::$ctrl.appName | lowercase"></h1>
+      <h1 class="logo-font" ng-bind="::$ctrl.appName"></h1>
       <p>A place to share your knowledge.</p>
     </div>
   </div>
