--- a/src/js/auth/auth.html
+++ b/src/js/auth/auth.html
@@ -13,6 +13,13 @@
           </a>
         </p>
 
+        <ul class="error-messages" ng-show="$ctrl.errors">
+          <div ng-repeat="(field, errors) in $ctrl.errors">
+            <li ng-repeat="error in errors">
+              {{field}} {{error}}
+            </li>
+          </div>
+        </ul>
         <form ng-submit="$ctrl.submitForm()">
           <fieldset ng-disabled="$ctrl.isSubmitting">
 
