--- a/src/js/auth/auth.html
+++ b/src/js/auth/auth.html
@@ -4,17 +4,19 @@
 
       <div class="col-md-6 offset-md-3 col-xs-12">
         <h1 class="text-xs-center" ng-bind="::$ctrl.title"></h1>
-        <p class="text-xs-center" >
-          <a ui-sref="app.login" ng-show="$ctrl.authType === 'register'">
+        <p class="text-xs-center">
+          <a ui-sref="app.login"
+            ng-show="$ctrl.authType === 'register'">
             Have an account?
           </a>
-          <a ui-sref="app.register" ng-show="$ctrl.authType === 'login'">
+          <a ui-sref="app.register"
+            ng-show="$ctrl.authType === 'login'">
             Need an account?
           </a>
         </p>
-        
+
         <list-errors errors="$ctrl.errors"></list-errors>
-        
+
         <form ng-submit="$ctrl.submitForm()">
           <fieldset ng-disabled="$ctrl.isSubmitting">
 
@@ -40,7 +42,8 @@
             </fieldset>
 
             <button class="btn btn-lg btn-primary pull-xs-right"
-              type="submit" ng-bind="::$ctrl.title">
+              type="submit"
+              ng-bind="::$ctrl.title">
             </button>
 
           </fieldset>
