--- a/src/js/settings/settings.html
+++ b/src/js/settings/settings.html
@@ -58,7 +58,7 @@
         <hr />
 
         <button class="btn btn-outline-danger"
-          
+            ng-click="$ctrl.logout">
           Or click here to logout.
         </button>
 
